...
    "barbell curl" to "Сгибание рук со штангой",
    "barbell good morning" to "Наклоны «доброе утро» со штангой",
    "barbell hip thrust (or machine)" to "Ягодичный мост со штангой (или в тренажёре)",
    "barbell row" to "Тяга штанги в наклоне",
    "barbell wrist curl" to "Сгибание запястий со штангой",
    "behind-the-back curls · cable" to "Сгибание рук за спиной · Блок",
    "bench press" to "Жим лёжа",
    "bench press · barbell" to "Жим лёжа · Штанга",
    "bench press · dumbbells" to "Жим лёжа · Гантели",
    "bench press · smith machine" to "Жим лёжа · Машина Смита",
    "bench press with close grip · barbell" to "Жим лёжа узким хватом · Штанга",
    "bent-over barbell row" to "Тяга штанги в наклоне",
    "bent-over rows with reverse grip · barbell" to "Тяга в наклоне обратным хватом · Штанга",
...
